@@ -8,6 +8,9 @@ Changelog
 Plone 4.0 - UNRELEASED
 ----------------------
 
+- Worked around `sys._getframe` call.
+  [malthe]
+
 - Removed macro slot for changing the document type; this was not
   correct XML and should this flexibility be required, it's
   recommended to customize `main_template.pt`.
